welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit: Boolean = false
   if (estSurBiscuit()) {
      vuBiscuit = true;
    }
  for(k <- 1 to 6) {
    avance();
    if (estSurBiscuit()) {
      vuBiscuit = true;
    }
  }
  recule(6);
}